--- a/youyuanhui/dev/css/style.css
+++ b/youyuanhui/dev/css/style.css
@@ -155,42 +155,41 @@ body {
   text-align: center;
 }
 .m_game .quan .run_l {
-  animation: move_l 2s infinite;
+  animation: move_l 3s infinite;
   transform-origin: center 90%;
 }
 .m_game .quan .run_r {
-  animation: move_r 2s infinite;
+  animation: move_r 3s infinite;
   transform-origin: center 90%;
 }
 .m_game .quan .hanl_l {
   left: 0;
+  transform: rotate(45deg);
 }
 .m_game .quan .hanl_r {
   right: 0;
+  transform: rotate(-45deg);
 }
 .m_game .quan strong {
   display: inline-block;
+  height: 4.35rem;
   background: url(../images/quan.png) no-repeat;
-  background-size: 13.175rem 4.425rem;
+  background-size: 13.175rem 4.35rem;
 }
 .m_game .quan .s_l {
   width: 2.15rem;
-  height: 3.975rem;
   background-position: 0 0;
 }
 .m_game .quan .j_l {
   width: 1.65rem;
-  height: 4.4rem;
   background-position: -2.275rem 0;
 }
 .m_game .quan .b_l {
   width: 2.5rem;
-  height: 4.35rem;
   background-position: -4.05rem 0;
 }
 .m_game .quan .s_r {
   width: 2.15rem;
-  height: 3.975rem;
   background-position: -6.675rem 0;
 }
 .m_game .quan .j_r {
@@ -200,7 +199,6 @@ body {
 }
 .m_game .quan .b_r {
   width: 2.5rem;
-  height: 4.35rem;
   background-position: -10.7rem 0;
 }
 .m_game .quan i {
@@ -319,24 +317,33 @@ body {
 
 @keyframes move_l {
   0% {
+    transform: rotate(45deg);
+  }
+  25% {
     transform: rotate(0deg);
   }
   50% {
     transform: rotate(45deg);
   }
-  100% {
+  75% {
     transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(45deg);
   }
 }
 @keyframes move_r {
-  0% {
+  25% {
     transform: rotate(0deg);
   }
   50% {
     transform: rotate(-45deg);
   }
-  100% {
+  75% {
     transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-45deg);
   }
 }
 .m_rank {
@@ -486,6 +493,7 @@ body {
   width: 100%;
   text-align: center;
   color: #fff;
+  border-radius: 0 0 0.5rem 0.5rem;
 }
 .m_exchange img {
   display: block;
@@ -731,19 +739,19 @@ footer dl dd {
   width: 9.4rem;
 }
 
-.g_popBox {
-  position: relative;
-  margin: 2.5rem 0.75rem;
+.m_pop .content {
   background: #c1f3ff;
+  position: relative;
+  margin: 0 0.75rem;
   border-radius: 0.5rem;
   padding: 0.275rem;
 }
-.g_popBox .content {
+.m_pop .content > div {
   background: #17bafd;
   box-shadow: 0 -0.125rem 0 0 #0897d3;
   border-radius: 0.25rem;
 }
-.g_popBox .close {
+.m_pop .close {
   position: absolute;
   top: -0.575rem;
   right: -0.475rem;
@@ -1028,7 +1036,9 @@ footer dl dd {
   height: 2.1rem;
   left: 4.35rem;
   top: -0.675rem;
-  background: #fff;
+  background: url(../images/selectquan.png) no-repeat;
+  background-size: 13.125rem 2.8rem;
+  background-position: -7.25rem 0rem;
 }
 .popQuan .box {
   background: #ffd050;
@@ -1051,7 +1061,6 @@ footer dl dd {
   display: block;
   margin: auto;
   position: relative;
-  background: #fff;
 }
 .popQuan .quan .st {
   position: absolute;
@@ -1062,6 +1071,9 @@ footer dl dd {
   width: 2.15rem;
   height: 1.925rem;
   top: 0.775rem;
+  background: url(../images/selectquan.png) no-repeat;
+  background-size: 13.125rem 2.8rem;
+  background-position: 0rem 0rem;
 }
 .popQuan .quan .bu {
   position: relative;
@@ -1073,6 +1085,9 @@ footer dl dd {
   width: 2.5rem;
   height: 2.65rem;
   top: 0.375rem;
+  background: url(../images/selectquan.png) no-repeat;
+  background-size: 13.125rem 2.8rem;
+  background-position: -2.45rem 0rem;
 }
 .popQuan .quan .jd {
   position: absolute;
@@ -1083,6 +1098,9 @@ footer dl dd {
   width: 1.65rem;
   height: 2.525rem;
   top: 0.4rem;
+  background: url(../images/selectquan.png) no-repeat;
+  background-size: 13.125rem 2.8rem;
+  background-position: -5.325rem 0rem;
 }
 
 .g_pop {
